samples/_failures_safe/1761075464_ad2e88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9f744d2.c: In function ‘main’:
./samples/SAFE/__tmp_d9f744d2.c:150:5: error: expected expression at end of input
  150 |     double cpu_time = ((double)(
      |     ^~~~~~
./samples/SAFE/__tmp_d9f744d2.c:150:5: error: expected declaration or statement at end of input
